Разметка основных компонентов в файле Индекс

--- a/Mashimport/Views/About/Index.cshtml
+++ b/Mashimport/Views/About/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿<div class="dt main">
-			<div class="dr">
-	  			<div class="dc">
-					<div class="dt header">
+	<div class="dr">
+		<div class="dc">
+			<!--Header-->
+			<div class="dt header">
 						<div class="dr">
 							<div class="dc hear_width1"></div>
 							<div class="dc hear_width2">
@@ -45,8 +46,10 @@
 							</div>
 							<div class="dc hear_width3"></div>
 						</div>
-					</div>
-					<div class="dt content">
+			</div><!--HeaderEnd-->
+
+			<!--Content-->
+			<div class="dt content">
 						<div class="dr">
 							<div class="dc content_width1"><img src="images/img_left.gif" alt=""><br></div>
 							<div class="dc content_width2">
@@ -122,8 +125,10 @@
 							</div>
 							<div class="dc content_width3"><img src="/images/img_right.gif" alt=""><br></div>
 						</div>
-					</div>
-					<div class="dt footer">
+			</div><!--ContentEnd-->
+
+			<!--Footer-->
+			<div class="dt footer">
 						<div class="dr">
 							<div class="dc">
 								<div style="margin:3px 15px 0 70px; vertical-align:bottom;"><img src="/images/logo_footer.gif" alt="" align="left"> <span><br style="line-height:6px;">Copyright &copy; 1991-2014 MASHIMPORT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
@@ -141,7 +146,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
+			</div><!--FooterEnd-->
 		</div>
+	</div>
+</div>
