--- a/Mashimport/Views/About/Index.cshtml
+++ b/Mashimport/Views/About/Index.cshtml
@@ -24,7 +24,7 @@
 									<div class="dr">
 										<div class="dc">
 											<br style="line-height:53px">
-											<img src="images/slogan.gif" alt="" style="margin-left:367px"><br>
+											<img src="~/images/slogan.gif" alt="" style="margin-left:367px"><br>
 										</div>
 									</div>
 								</div>
@@ -33,11 +33,11 @@
 										<div class="dc">
 											<table cellpadding="0" cellspacing="0" width="681" height="31" border="0">
 												<tr>
-													<td width="194"><img src="images/p_left.gif" width="194" height="37" alt=""></td>
+													<td width="194"><img src="~/images/p_left.gif" width="194" height="37" alt=""></td>
 													<td width="97" class="button1" align="center"><a href="index.php">О компании</a></td>
 													<td width="97" class="button2" align="center"><a href="index-2.php">Партнеры</a></td>
 													<td width="98" class="button3" align="center"><a href="index-3.php">Контакты</a></td>
-													<td width="195"><img src="images/p_right.gif" width="195" height="37" alt=""></td>
+													<td width="195"><img src="~/images/p_right.gif" width="195" height="37" alt=""></td>
 												</tr>
 											</table>
 										</div>
@@ -51,7 +51,7 @@
 			<!--Content-->
 			<div class="dt content">
 						<div class="dr">
-							<div class="dc content_width1"><img src="images/img_left.gif" alt=""><br></div>
+							<div class="dc content_width1"><img src="~/images/img_left.gif" alt=""><br></div>
 							<div class="dc content_width2">
 								<div class="dt" style="height:183px">
 									<div class="dr">
@@ -127,26 +127,8 @@
 						</div>
 			</div><!--ContentEnd-->
 
-			<!--Footer-->
-			<div class="dt footer">
-						<div class="dr">
-							<div class="dc">
-								<div style="margin:3px 15px 0 70px; vertical-align:bottom;"><img src="/images/logo_footer.gif" alt="" align="left"> <span><br style="line-height:6px;">Copyright &copy; 1991-2014 MASHIMPORT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-									<!--LiveInternet counter--><script type="text/javascript"><!--
-									document.write("<a href='http://www.liveinternet.ru/click' "+
-									"target=_blank><img src='http://counter.yadro.ru/hit?t26.2;r"+
-									escape(document.referrer)+((typeof(screen)=="undefined")?"":
-									";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-									screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-									";"+Math.random()+
-									"' alt='' title='LiveInternet"+
-									"border='0' width='88' height='15'><\/a>")
-									//--></script><!--/LiveInternet-->
-									</span>
-								</div>
-							</div>
-						</div>
-			</div><!--FooterEnd-->
+			<partial name="Partial/_Footer"/>
+			
 		</div>
 	</div>
 </div>
