--- a/Mashimport/Views/Shared/Partial/_Header.cshtml
+++ b/Mashimport/Views/Shared/Partial/_Header.cshtml
@@ -11,9 +11,19 @@
 						</div>
 						<div class="dc" style="width:412px;">
 							<br style="line-height:40px">
-							<a href="/index.php" class="leng active"><img src="~/images/russia.png" alt="" border="0" style="vertical-align: middle;"> <span>Русский</span></a>
-							<a href="/english/index.php" class="leng lenleft" ><img src="~/images/gbr.png" alt="" border="0" style="vertical-align: middle;"> <span>English</span></a>
-							<a href="/china/index.php" class="leng lenleft"><img src="~/images/china.png" alt="" border="0" style="vertical-align: middle;"> <span>Chinese</span></a><br>
+							<a asp-controller="About" asp-action="Index" class="leng active">
+								<img src="~/images/russia.png" alt="" border="0" style="vertical-align: middle;">
+								<span>Русский</span>
+							</a>
+							<a href="/english/index.php" class="leng lenleft" >
+								<img src="~/images/gbr.png" alt="" border="0" style="vertical-align: middle;">
+								<span>English</span>
+							</a>
+							<a href="/china/index.php" class="leng lenleft">
+								<img src="~/images/china.png" alt="" border="0" style="vertical-align: middle;">
+								<span>Chinese</span>
+							</a>
+							<br>
 						</div>
 					</div>
 				</div>
@@ -30,11 +40,21 @@
 						<div class="dc">
 							<table cellpadding="0" cellspacing="0" width="681" height="31" border="0">
 								<tr>
-									<td width="194"><img src="~/images/p_left.gif" width="194" height="37" alt=""></td>
-									<td width="97" class="button1" align="center"><a href="index.php">О компании</a></td>
-									<td width="97" class="button2" align="center"><a href="index-2.php">Партнеры</a></td>
-									<td width="98" class="button3" align="center"><a href="index-3.php">Контакты</a></td>
-									<td width="195"><img src="~/images/p_right.gif" width="195" height="37" alt=""></td>
+									<td width="194">
+										<img src="~/images/p_left.gif" width="194" height="37" alt="">
+									</td>
+									<td width="97" class="button1" align="center">
+										<a asp-controller="About" asp-action="Index">О компании</a>
+									</td>
+									<td width="97" class="button2" align="center">
+										<a href="index-2.php">Партнеры</a>
+									</td>
+									<td width="98" class="button3" align="center">
+										<a href="index-3.php">Контакты</a>
+									</td>
+									<td width="195">
+										<img src="~/images/p_right.gif" width="195" height="37" alt="">
+									</td>
 								</tr>
 							</table>
 						</div>
