Приведение в порядок разметки

--- a/Mashimport/Views/About/Partial/_Content.cshtml
+++ b/Mashimport/Views/About/Partial/_Content.cshtml
@@ -1,7 +1,10 @@
 ﻿<!--Content-->
 <div class="dt content">
 	<div class="dr">
-		<div class="dc content_width1"><img src="~/images/img_left.gif" alt=""><br></div>
+		<div class="dc content_width1">
+			<img src="~/images/img_left.gif" alt="">
+			<br>
+		</div>
 		<div class="dc content_width2">
 			<div class="dt" style="height:183px">
 				<div class="dr">
@@ -73,6 +76,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="dc content_width3"><img src="~/images/img_right.gif" alt=""><br></div>
+		<div class="dc content_width3">
+			<img src="~/images/img_right.gif" alt="">
+			<br>
+		</div>
 	</div>
-</div><!--ContentEnd-->
+</div>
+<!--ContentEnd-->
