--- a/Mashimport/Views/Shared/Partial/_Header.cshtml
+++ b/Mashimport/Views/Shared/Partial/_Header.cshtml
@@ -1,13 +1,16 @@
 ﻿<!--Header-->
 	<div class="dt header">
 		<div class="dr">
-			<div class="dc hear_width1"></div>
+			<div class="dc hear_width1"/>
 			<div class="dc hear_width2">
 				<div class="dt head_height1">
 					<div class="dr">
 						<div class="dc" style="width:210px">
 							<br style="line-height:13px">
-								<a href="/"><img src="~/images/logo.gif" alt="" border="0" style="margin-left:35px"></a><br>
+							<a href="/">
+								<img src="~/images/logo.gif" alt="" border="0" style="margin-left:35px">
+							</a>
+							<br>
 						</div>
 						<div class="dc" style="width:412px;">
 							<br style="line-height:40px">
