Добавление секций в частичные представления

--- a/Mashimport/Views/Shared/Partial/_Header.cshtml
+++ b/Mashimport/Views/Shared/Partial/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿<!--Header-->
+﻿<section>
 	<div class="dt header">
 		<div class="dr">
 			<div class="dc hear_width1"/>
@@ -50,7 +50,7 @@
 										<a asp-controller="About" asp-action="Index">О компании</a>
 									</td>
 									<td width="97" class="button2" align="center">
-										<a href="index-2.php">Партнеры</a>
+										<a asp-controller="Partners" asp-action="Index">Партнеры</a>
 									</td>
 									<td width="98" class="button3" align="center">
 										<a href="index-3.php">Контакты</a>
@@ -67,4 +67,4 @@
 			<div class="dc hear_width3"></div>
 		</div>
 	</div>
-<!--HeaderEnd-->
+</section>
