--- a/Mashimport/Views/Shared/Partial/_Header.cshtml
+++ b/Mashimport/Views/Shared/Partial/_Header.cshtml
@@ -64,7 +64,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="dc hear_width3"></div>
+			<div class="dc hear_width3"/>
 		</div>
 	</div>
 </section>
