--- a/Mashimport/Views/Shared/_Layout.cshtml
+++ b/Mashimport/Views/Shared/_Layout.cshtml
@@ -4,10 +4,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>О КОМПАНИИ MASHIMPORT импорт промышленного оборудования</title>
-		<link href="~/styles/style.css" rel="stylesheet" type="text/css">
-		<!--[if IE]>
-		<link href="style_ie.css" rel="stylesheet" type="text/css">
-		<![endif]-->
+		<partial name="Partial/_Styles"/>
 		<partial name="Partial/_Scripts"/>
 	</head>
 	<body 
