--- a/Mashimport/Views/Shared/Partial/_Scripts.cshtml
+++ b/Mashimport/Views/Shared/Partial/_Scripts.cshtml
@@ -24,4 +24,4 @@
 	}
 	//-->
 </script>
-<script src="/js/google.js" type="text/javascript"></script>
+<script src="~/js/google.js" type="text/javascript"></script>
