Сбилась верстка, ХЗ почему =(

--- a/Mashimport/Views/About/Index.cshtml
+++ b/Mashimport/Views/About/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿<section>
+	<div class=container>
 	<div class="dt main">
 		<div class="dr">
 			<div class="dc">
@@ -7,5 +8,6 @@
 				<partial name="Partial/_Footer"/>
 			</div>
 		</div>
+	</div>
 	</div>
 </section>
