--- a/Mashimport/Views/About/Partial/_About.cshtml
+++ b/Mashimport/Views/About/Partial/_About.cshtml
@@ -1,4 +1,6 @@
 ﻿<section>
+	<div class=container>
+		
     <div class="dc" style="width:550px; border:0px solid #000;">
 		<br style="line-height:9px">
 		<h1 style="color:#0076A3; margin-left:12px;">О КОМПАНИИ</h1>
@@ -59,4 +61,5 @@
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 	</div>	
+	</div>
 </section>
