--- a/Mashimport/Views/About/Partial/_Content.cshtml
+++ b/Mashimport/Views/About/Partial/_Content.cshtml
@@ -1,5 +1,6 @@
 ﻿<section>
-    <div class="dt content">
+	<div class=container>
+		<div class="dt content">
 		<div class="dr">
 		<div class="dc content_width1">
 			<img src="~/images/img_left.gif" alt="">
@@ -22,4 +23,6 @@
 		</div>
 		</div>
 	</div>
+	</div>
+    
 </section>
