--- a/Mashimport/Views/Partners/Partial/_OurPartners.cshtml
+++ b/Mashimport/Views/Partners/Partial/_OurPartners.cshtml
@@ -1,4 +1,6 @@
 ﻿<section>
+	<div class=container>
+		
 	<div style="margin-left:12px; margin-right:50px">
 		<br style="line-height:9px">
 			<p><strong>Компания &laquo;МАШИМПОРТ&raquo;</strong> предлагает своим клиентам высочайший уровень сервиса во всех вопросах, связанных с ведением Внешней-Экономической Деятельности.</p>
@@ -24,5 +26,6 @@
 			<p>В постоянном штате компании специалисты, говорящие на всех иностранных языках, которые применяются в большинстве стран мира.</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
+	</div>
 	</div>
 </section>
