--- a/Mashimport/Views/Shared/Partial/_Header.cshtml
+++ b/Mashimport/Views/Shared/Partial/_Header.cshtml
@@ -1,5 +1,6 @@
 ﻿<section>
-	<div class="dt header">
+	<div class=container>
+		<div class="dt header">
 		<div class="dr">
 			<div class="dc hear_width1"/>
 			<div class="dc hear_width2">
@@ -67,4 +68,6 @@
 			<div class="dc hear_width3"/>
 		</div>
 	</div>
+	</div>
+	
 </section>
