--- a/Mashimport/Views/Partners/Index.cshtml
+++ b/Mashimport/Views/Partners/Index.cshtml
@@ -1,9 +1,11 @@
-﻿<div class="dt main">
-	<div class="dr">
-		<div class="dc">
-			<partial name="Partial/_Header"/>
-			<partial name="Partial/_Content"/>
-			<partial name="Partial/_Footer"/>
+﻿<div class=container>
+	<div class="dt main">
+		<div class="dr">
+			<div class="dc">
+				<partial name="Partial/_Header"/>
+				<partial name="Partial/_Content"/>
+				<partial name="Partial/_Footer"/>
+			</div>
 		</div>
 	</div>
 </div>
