--- a/Mashimport/Views/Partners/Partial/_Content.cshtml
+++ b/Mashimport/Views/Partners/Partial/_Content.cshtml
@@ -1,5 +1,6 @@
 ﻿<section>
-	<div class="dt content">
+	<div class=container>
+		<div class="dt content">
 		<div class="dr">
 			<div class="dc content_width1">
 				<img src="~/images/img_left.gif" alt="">
@@ -27,6 +28,8 @@
 			</div>
 		</div>
 	</div>
+	</div>
+	
 </section>
 
 			
